--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -1,15 +1,37 @@
 {
-  "name": "admin-dashboard",
+  "name": "front-end",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.10.1",
+    "formik": "^2.4.6",
+    "query-string": "^9.1.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-lottie": "^1.2.4",
+    "react-markdown": "^9.0.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-select": "^5.8.0",
+    "remark-gfm": "^4.0.0",
+    "styled-components": "^6.1.11",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +56,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4"
   }
 }
